<resources>
    <string name="app_name">Yummy India</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="phone_email_or_username">Phone, email or username</string>
    <string name="log_in_to_yummy_india">Log in to Yummy India</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="no_account">No Account?</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="account">Account</string>
    <string name="food_menu">Food Menu</string>
    <string name="title_activity_soups">Soups</string>
    <string name="title_activity_food_items">Food Items</string>
    <string name="username">Username</string>
    <string name="email_address">Email address</string>
</resources>
