<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.shekhar.yummyindia.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_cart"
        android:orderInCategory="0"
        android:title="@string/shopping_cart"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_cart"/>
    <item
        android:id="@+id/action_account"
        android:orderInCategory="0"
        android:title="@string/account"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_account"/>

</menu>
